--- a/edt/config.json
+++ b/edt/config.json
@@ -8,3 +8,4 @@ Temporary commit content 68
 Temporary commit content 76
 Temporary commit content 104
 Temporary commit content 128
+Temporary commit content 134
