--- a/edt/config.json
+++ b/edt/config.json
@@ -3,3 +3,4 @@ Temporary commit content 15
 Temporary commit content 21
 Temporary commit content 27
 Temporary commit content 46
+Temporary commit content 54
