Enhanced UI responsiveness

--- a/edt/config.json
+++ b/edt/config.json
@@ -6,3 +6,4 @@ Temporary commit content 46
 Temporary commit content 54
 Temporary commit content 68
 Temporary commit content 76
+Temporary commit content 104
