--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -12,3 +12,4 @@ Temporary commit content 110
 Temporary commit content 133
 Temporary commit content 135
 Temporary commit content 138
+Temporary commit content 142
