--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -13,3 +13,4 @@ Temporary commit content 133
 Temporary commit content 135
 Temporary commit content 138
 Temporary commit content 142
+Temporary commit content 143
