--- a/edt/config.json
+++ b/edt/config.json
@@ -5,3 +5,4 @@ Temporary commit content 27
 Temporary commit content 46
 Temporary commit content 54
 Temporary commit content 68
+Temporary commit content 76
