--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -4,3 +4,4 @@ Temporary commit content 32
 Temporary commit content 37
 Temporary commit content 47
 Temporary commit content 56
+Temporary commit content 82
